--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "files.associations": {
+        "*.embeddedhtml": "html",
+        "format": "cpp",
+        "xstring": "cpp"
+    }
 }
